# Bayesian-Greedy-Tensor-Factorization

./: CONTRIBUTING.md  README.md  model.py  pyproject.toml
.pytest_cache/v/cache/: nodeids
docs/: algorithm.md  repo_layout.md
examples/: run_synthetic.py
src/continuous_bayesian_cp/: __init__.py
src/continuous_bayesian_cp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_smoke.py
