[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-bayesian-cp"
version = "0.1.0"
description = "Continuous Bayesian CP decomposition with soft spike-and-slab shrinkage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
